--- a/marketing/SAS_MKT_salestracker.html
+++ b/marketing/SAS_MKT_salestracker.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Sales Tracker</h1>
-	<form action="orderform.php" method="post">
+	<form action="SAS_MKT_salestracker.php" method="post">
 		<label for="goods-type">Type of Goods:</label>
 		<select name="goods-type" id="goods-type">
 			<option value="Foods">Foods</option>
