--- a/marketing/SAS_MKT_login.html
+++ b/marketing/SAS_MKT_login.html
@@ -4,31 +4,41 @@
 	<title>Customer Data Request Form</title>
 </head>
 <body>
-	<h1>Customer Data Request Form</h1>
+	<center>
+	<h1>Customer Information Form</h1>
+	<table border="5">
+		<tr>
 	<form action="customerdata.php" method="POST">
-		<label for="full-name">Full Name:</label><br>
-		<input type="text" id="full-name" name="full-name"><br>
-		
-		<label for="contact-info">Contact Info:</label><br>
-		<input type="text" id="contact-info" name="contact-info"><br>
-		
-		<label for="address">Address:</label><br>
-		<input type="text" id="address" name="address"><br>
-		
-		<label for="company-name">Company Name:</label><br>
-		<input type="text" id="company-name" name="company-name"><br>
-		
-		<label for="bday">Birthday:</label><br>
-		<input type="date" id="bday" name="bday"><br>
-		
-		<label for="gender">Gender:</label><br>
-		<select id="gender" name="gender">
-			<option value="male">Male</option>
-			<option value="female">Female</option>
-			<option value="other">Other</option>
+		<td><label for="full-name">Full Name:</label><br></td>
+		<td><input type="text" id="full-name" name="full-name"><br></td>
+		</tr>
+			<tr>
+			<td><label for="contact-info">Contact Number/Email:</label><br></td>
+			<td><input type="text" id="contact-info" name="contact-info"><br></td>
+			</tr>
+		<tr>
+		<td><label for="address">Address:</label><br></td>
+		<td><input type="text" id="address" name="address"><br></td>
+		</tr>
+		<tr>
+		<td><label for="company-name">Company Name:</label><br></td>
+		<td><input type="text" id="company-name" name="company-name"><br></td>
+		</tr>
+		<tr>
+		<td><label for="bday">Birthday:</label><br></td>
+		<td><input type="date" id="bday" name="bday"><br></td>
+		</tr>
+		<tr>
+		<td><b> Gender </b></td>
+		<td>
+		<label><input type="radio" name="male" value="m"> Male</label>
+		<label><input type="radio" name="female" value="f"> Female</label>
+		</td>
 		</select><br><br>
-		
-		<input type="submit" value="Submit">
-	</form>
+		</tr> 
+	</table>
+		<input align="center" type="Submit">
+	</form> </tr>
+	</center>
 </body>
 </html>
