--- a/SAS_HRD/SAS_HRD_New_Employee.html
+++ b/SAS_HRD/SAS_HRD_New_Employee.html
@@ -11,7 +11,7 @@ background-size: cover;
 font-family: Arial, Helvetica, sans-serif;">
     <center>
 	<h1>Employees Information</h1>
-    <form method="post" action="submit.php">
+    <form method="post" action="SAS_HRD_New_Employee.php">
 	<table border="0" cellpadding="7">
         <h2>Personal Information</h2>
 		<tr>
