--- a/marketing/SAS_MKT_salestracker_edited.html
+++ b/marketing/SAS_MKT_salestracker_edited.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Sales Tracker</title>
+	<link rel="stylesheet" type="text/css" href="sas_mkt_style.css">
 </head>
 <body>
 	<h1>Sales Tracker</h1>
