--- a/marketing/SAS_MKT_salestracker_edited.html
+++ b/marketing/SAS_MKT_salestracker_edited.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 	<h1>Sales Tracker</h1>
-	<form action="SAS_MKT_salestracker.php" method="post">
+	<form action="SAS_MKT_salestracker.php" class="form-container"  method="post">
 	<table border="1">
 	<tr>
-		<td><label for="goods-type">Type of Goods:</label></td>
+		<td><label for="goods-type"> class="form-label" Type of Goods:</label></td>
 		<td>
-			<select name="goods-type" id="goods-type">
+			<select name="goods-type" class="form-input" id="goods-type">
 				<option value="Foods">Foods</option>
 				<option value="Buns">Buns</option>
 				<option value="Beverages">Beverages</option>
@@ -21,21 +21,21 @@
 	<tr>
 		<td><label for="item-name">Item Name:</label></td>
 		<td>
-			<select name="item-name" id="item-name">
-				<optgroup label="Snacks">
+			<select name="item-name" class="form-input" id="item-name">
+				<optgroup label="Snacks" class="form-label">
 					<option value="Takoyaki">Takoyaki</option>
 					<option value="Dumplings">Dumplings</option>
 					<option value="Nachos">Nachos</option>
 					<option value="Siomai">Siomai</option>
 				</optgroup>
-				<optgroup label="Buns">
+				<optgroup label="Buns" class="form-label">
 					<option value="Classic Burger">Classic Burger</option>
 					<option value="Burger w/ cheese">Burger w/ cheese</option>
 					<option value="Burger Overload">Burger Overload</option>
 					<option value="Classic Hotdog Sandwich">Classic Hotdog Sandwich</option>
 					<option value="Hotdog Sandwich Overload">Hotdog Sandwich Overload</option>
 				</optgroup>
-				<optgroup label="Milktea">
+				<optgroup label="Milktea" class="form-label">
 					<option value="Chocolate">Chocolate</option>
 					<option value="Okinawa">Okinawa</option>
 					<option value="Dark Chocolate">Dark Chocolate</option>
@@ -45,14 +45,14 @@
 					<option value="Thai">Thai</option>
 					<option value="Wintermelon">Wintermelon</option>
 				</optgroup>
-				<optgroup label="Fruit tea">
+				<optgroup label="Fruit tea" class="form-label">
 					<option value="Blueberry">Blueberry</option>
 					<option value="Strawberry">Strawberry</option>
 					<option value="Lychee">Lychee</option>
 					<option value="Green apple">Green apple</option>
 					<option value="Mango">Mango</option>
 				</optgroup>
-				<optgroup label="Fruit Soda">
+				<optgroup label="Fruit Soda" class="form-label">
 					<option value="Blue Lemonade">Blue Lemonade</option>
 					<option value="Blueberry">Blueberry</option>
 					<option value="Strawberry">Strawberry</option>
@@ -63,21 +63,21 @@
 		</td>
 	</tr>
     <tr>
-        <td><label for="amount-cost">Amount Cost:</label></td>
+        <td><label for="amount-cost" class="form-label">Amount Cost:</label></td>
         <td><input type="number" name="amount-cost" id="amount-cost" required></td>
     </tr>
     <tr>
-        <td><label for="date-purchased">Date Purchased:</label></td>
+        <td><label for="date-purchased" class="form-label">Date Purchased:</label></td>
         <td><input type="date" name="date-purchased" id="date-purchased" required></td>
     </tr>
     <tr>
-        <td><label for="quantity">Quantity:</label></td>
+        <td><label for="quantity" class="form-label">Quantity:</label></td>
         <td><input type="number" name="quantity" id="quantity" required></td>
     </tr>
     <tr>
-        <td><label for="payment-mode">Payment mode:</label></td>
+        <td><label for="payment-mode" class="form-label">Payment mode:</label></td>
         <td>
-            <select name="payment-mode" id="payment-mode">
+            <select name="payment-mode" class="form-input" id="payment-mode">
                 <option value="Cash">Cash</option>
                 <option value="Credit Card">Credit Card</option>
                 <option value="Debit Card">Debit Card</option>
@@ -86,7 +86,7 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2"><button type="submit">Submit</button></td>
+        <td colspan="2"><button type="submit" class="form-button">Submit</button></td>
     </tr>
 </table>
 </form>
