--- a/marketing/SAS_MKT_salestracker_edited.html
+++ b/marketing/SAS_MKT_salestracker_edited.html
@@ -9,7 +9,7 @@
 	<form action="SAS_MKT_salestracker.php" class="form-container"  method="post">
 	<table border="1">
 	<tr>
-		<td><label for="goods-type"> class="form-label" Type of Goods:</label></td>
+		<td><label for="goods-type" class="form-label">  Type of Goods:</label></td>
 		<td>
 			<select name="goods-type" class="form-input" id="goods-type">
 				<option value="Foods">Foods</option>
