--- a/marketing/sas_mkt_login.edit.html
+++ b/marketing/sas_mkt_login.edit.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Login Form</title>
-	<link rel="stylesheet" href="sns.css">
+	<link rel="stylesheet" href="sas_mkt_style.css">
 </head>
 <body>
 	<div class="form-container">
