--- a/marketing/sas_mkt_new_loginform.html
+++ b/marketing/sas_mkt_new_loginform.html
@@ -76,6 +76,9 @@
 		<form>
 			<h1 class="form-title">Login Form</h1>
 			<fieldset class="form-fieldset">
+				<label for="name" class="form-label">Name</label>
+				<input type="text" id="name" name="name" class="form-input" required>
+
 				<label for="email" class="form-label">Email</label>
 				<input type="email" id="email" name="email" class="form-input" required>
 
